# microservice_rs

./: Cargo.toml  readme.md
migrations/2018-02-18-021049_create_messages/: up.sql
src/: db.rs  lib.rs  main.rs  messages.rs
