[package]
authors = ["ryym <ryym.64@gmail.com>"]
name = "microservice"
version = "0.1.0"

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
maud = "0.17.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
url = "1.6.0"

[dependencies.diesel]
features = ["postgres"]
version = "1.0.0"
